unpackaged/main/default/objects/Account/fields/Accounts_created_by_RG__c.field-meta.xml
<CustomField>
    <fullName>Accounts_created_by_RG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created By RG</label>
    <type>Checkbox</type>
</CustomField>