unpackaged/main/default/objects/Account/fields/AI_Firm_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Firm_Summary__c</fullName>
    <label>AI Firm Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>