unpackaged/main/default/objects/Account/fields/Allocation_Alternatives_mn__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Alternatives_mn__c</fullName>
    <label>Allocation - Alternatives (mn)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>