unpackaged/main/default/objects/Account/fields/Alternative_Percent__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Percent__c</fullName>
    <label>Alternative %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>