unpackaged/main/default/objects/Account/fields/Amount_of_Equity_Invested_FollowOn3__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Equity_Invested_FollowOn3__c</fullName>
    <formula>Equity_Invested_FollowOn3__c  +  Total_Mgmt_Equity_Invested_FollowOn3__c  +  Total_Exe_Fund_Co_investment_FollowOn3__c  +  Total_Other_Equity_FollowOn3__c  +  Total_LP_Co_investments_FollowOn3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Equity Invested - FollowOn3</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>