unpackaged/main/default/objects/Account/fields/Amount_of_Equity_Invested_Initial__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Equity_Invested_Initial__c</fullName>
    <formula>Equity_Invested_Initial__c  +  Total_Management_Equity_Invested_Initial__c  +  Total_Exec_Fund_Co_investment_Initial__c  +   Total_Other_Equity_Initial__c  +  Total_LP_Co_investments_Initial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Equity Invested - Initial</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>