unpackaged/main/default/objects/Account/fields/Assets_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Assets_of_Interest__c</fullName>
    <label>Assets of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Funds</fullName>
            </value>
            <value>
                <fullName>Co-investments</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>LBO</fullName>
            </value>
            <value>
                <fullName>1st Lien</fullName>
            </value>
            <value>
                <fullName>2nd Lien</fullName>
            </value>
            <value>
                <fullName>Senior Secured Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>