unpackaged/main/default/objects/Account/fields/AUM_in_Millions__c.field-meta.xml
<CustomField>
    <fullName>AUM_in_Millions__c</fullName>
    <label>AUM (in Millions)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>