unpackaged/main/default/objects/Account/fields/Avg_Deal_Quality__c.field-meta.xml
<CustomField>
    <fullName>Avg_Deal_Quality__c</fullName>
    <description>DO NOT USE</description>
    <label>Z_(Internal)_ADQS</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>