unpackaged/main/default/objects/Account/fields/Board_members__c.field-meta.xml
<CustomField>
    <fullName>Board_members__c</fullName>
    <label>Board members</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>