unpackaged/main/default/objects/Account/fields/Board_Seats_Held__c.field-meta.xml
<CustomField>
    <fullName>Board_Seats_Held__c</fullName>
    <label>Board Seats Held</label>
    <length>20</length>
    <type>Text</type>
</CustomField>