unpackaged/main/default/objects/Account/fields/Closing_Data_Currency__c.field-meta.xml
<CustomField>
    <fullName>Closing_Data_Currency__c</fullName>
    <label>Closing Data Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>