unpackaged/main/default/objects/Account/fields/Closing_Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Data_Date__c</fullName>
    <label>Closing Data Date</label>
    <type>Date</type>
</CustomField>