unpackaged/main/default/objects/Account/fields/Controlled_Fully_Diluted__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Fully_Diluted__c</fullName>
    <label>% Controlled Fully Diluted</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>