unpackaged/main/default/objects/Account/fields/Current_Allocation_Private_Equity__c.field-meta.xml
<CustomField>
    <fullName>Current_Allocation_Private_Equity__c</fullName>
    <label>Current Allocation - Private Equity (mn)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>