unpackaged/main/default/objects/Account/fields/Date_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Modified__c</fullName>
    <label>Date Last Modified</label>
    <type>Date</type>
</CustomField>