unpackaged/main/default/objects/Account/fields/Directors_Fee__c.field-meta.xml
<CustomField>
    <fullName>Directors_Fee__c</fullName>
    <label>Directors Fee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>