unpackaged/main/default/objects/Account/fields/Domicile__c.field-meta.xml
<CustomField>
    <fullName>Domicile__c</fullName>
    <label>Domicile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>