unpackaged/main/default/objects/Account/fields/Enterprise_Value_Closing__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Value_Closing__c</fullName>
    <label>Enterprise Value(Closing)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>