unpackaged/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Boutique M&amp;A</fullName>
            </value>
            <value>
                <fullName>Bridge Fund</fullName>
            </value>
            <value>
                <fullName>Bulge Bracket M&amp;A</fullName>
            </value>
            <value>
                <fullName>Business Broker</fullName>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Capital Call Fund</fullName>
            </value>
            <value>
                <fullName>Co-investment</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Distressed Debt</fullName>
            </value>
            <value>
                <fullName>Early Stage</fullName>
            </value>
            <value>
                <fullName>Early Stage: Seed</fullName>
            </value>
            <value>
                <fullName>Early Stage: Start-up</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Expansion / Late Stage</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>High Net Worth Individual</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Investment Bank</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>