unpackaged/main/default/objects/Account/fields/Equity_Invested_FollowOn3__c.field-meta.xml
<CustomField>
    <fullName>Equity_Invested_FollowOn3__c</fullName>
    <label>Equity Invested - FollowOn3</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>