unpackaged/main/default/objects/Account/fields/Equity_Invested_Initial__c.field-meta.xml
<CustomField>
    <fullName>Equity_Invested_Initial__c</fullName>
    <label>Equity Invested - Initial</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>