unpackaged/main/default/objects/Account/fields/Existing_LP__c.field-meta.xml
<CustomField>
    <fullName>Existing_LP__c</fullName>
    <formula>IF(( Total_Co_investment_Commitments__c +  Total_Fund_Commitments__c ) &gt; 0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing LP</label>
    <type>Checkbox</type>
</CustomField>