unpackaged/main/default/objects/Account/fields/Familiar_Name__c.field-meta.xml
<CustomField>
    <fullName>Familiar_Name__c</fullName>
    <description>Nick name for Institution</description>
    <label>Familiar Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>