unpackaged/main/default/objects/Account/fields/Fee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fee_Comments__c</fullName>
    <label>Fee Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>