unpackaged/main/default/objects/Account/fields/First_Time_Funds__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invest in First-Time Funds ?</label>
    <type>Checkbox</type>
</CustomField>