unpackaged/main/default/objects/Account/fields/Follow_on1_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_on1_Investment_Date__c</fullName>
    <label>Follow-on1 Investment Date</label>
    <type>Date</type>
</CustomField>