unpackaged/main/default/objects/Account/fields/forAverageDealQualityScore__c.field-meta.xml
<CustomField>
    <fullName>forAverageDealQualityScore__c</fullName>
    <formula>Avg_Deal_Quality__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Deal Quality Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>