unpackaged/main/default/objects/Account/fields/forTotalDealsShown__c.field-meta.xml
<CustomField>
    <fullName>forTotalDealsShown__c</fullName>
    <formula>Total_Deals_Shown__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deals Shown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>