unpackaged/main/default/objects/Account/fields/Fund_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Fund_Assessment__c</fullName>
    <label>Fund Assessment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>