unpackaged/main/default/objects/Account/fields/Fund_Performance__c.field-meta.xml
<CustomField>
    <fullName>Fund_Performance__c</fullName>
    <label>Fund Performance</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>