unpackaged/main/default/objects/Account/fields/Fund_Process__c.field-meta.xml
<CustomField>
    <fullName>Fund_Process__c</fullName>
    <label>Fund Process</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>