unpackaged/main/default/objects/Account/fields/Fund_Types__c.field-meta.xml
<CustomField>
    <fullName>Fund_Types__c</fullName>
    <label>Fund Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bridge Fund</fullName>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Capital Call Fund</fullName>
            </value>
            <value>
                <fullName>Co-investment</fullName>
            </value>
            <value>
                <fullName>Distressed Debt</fullName>
            </value>
            <value>
                <fullName>Early Stage</fullName>
            </value>
            <value>
                <fullName>Early Stage: Seed</fullName>
            </value>
            <value>
                <fullName>Early Stage: Start-up</fullName>
            </value>
            <value>
                <fullName>Expansion / Late Stage</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
            <value>
                <fullName>Secondaries</fullName>
            </value>
            <value>
                <fullName>Special Situations</fullName>
            </value>
            <value>
                <fullName>Turnaround</fullName>
            </value>
            <value>
                <fullName>Venture (General)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>