unpackaged/main/default/objects/Account/fields/Fundraising_in_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_in_Next_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundraising in Next 12 Months?</label>
    <type>Checkbox</type>
</CustomField>