unpackaged/main/default/objects/Account/fields/Geographic_Focus__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Focus__c</fullName>
    <label>Geographic Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Emerging Markets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>