unpackaged/main/default/objects/Account/fields/GIC_Codes__c.field-meta.xml
<CustomField>
    <fullName>GIC_Codes__c</fullName>
    <label>GIC Codes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10101010 Oil &amp; Gas Drilling</fullName>
            </value>
            <value>
                <fullName>10101020 Oil &amp; Gas Equipment &amp; Services</fullName>
            </value>
            <value>
                <fullName>10102010 Integrated Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>10102020 Oil &amp; Gas Exploration &amp; Production</fullName>
            </value>
            <value>
                <fullName>10102030 Oil &amp; Gas Refining &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>10102040 Oil &amp; Gas Storage &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>10102050 Coal &amp; Consumable Fuels</fullName>
            </value>
            <value>
                <fullName>15101010 Commodity Chemicals</fullName>
            </value>
            <value>
                <fullName>15101020 Diversified Chemicals</fullName>
            </value>
            <value>
                <fullName>15101030 Fertilizers &amp; Agricultural Chemicals</fullName>
            </value>
            <value>
                <fullName>15101040 Industrial Gases</fullName>
            </value>
            <value>
                <fullName>15101050 Specialty Chemicals</fullName>
            </value>
            <value>
                <fullName>15103010 Metal &amp; Glass Containers</fullName>
            </value>
            <value>
                <fullName>15103020 Paper Packaging</fullName>
            </value>
            <value>
                <fullName>15104010 Aluminum</fullName>
            </value>
            <value>
                <fullName>15104020 Diversified Metals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>15104030 Gold</fullName>
            </value>
            <value>
                <fullName>15104040 Precious Metals &amp; Minerals</fullName>
            </value>
            <value>
                <fullName>15104050 Steel</fullName>
            </value>
            <value>
                <fullName>15105010 Forest Products</fullName>
            </value>
            <value>
                <fullName>15105020 Paper Products</fullName>
            </value>
            <value>
                <fullName>20101010 Aerospace &amp; Defense</fullName>
            </value>
            <value>
                <fullName>20102010 Building Products</fullName>
            </value>
            <value>
                <fullName>20103010 Construction &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>15102010 Construction Materials</fullName>
            </value>
            <value>
                <fullName>20104010 Electrical Components &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>20104020 Heavy Electrical Equipment</fullName>
            </value>
            <value>
                <fullName>20105010 Industrial Conglomerates</fullName>
            </value>
            <value>
                <fullName>20106010 Construction &amp; Farm Machinery &amp; Heavy Trucks</fullName>
            </value>
            <value>
                <fullName>20106020 Industrial Machinery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>