unpackaged/main/default/objects/Account/fields/HasPipeline__c.field-meta.xml
<CustomField>
    <fullName>HasPipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to be deleted later</description>
    <label>HasPipeline</label>
    <type>Checkbox</type>
</CustomField>