unpackaged/main/default/objects/Account/fields/Industries__c.field-meta.xml
<CustomField>
    <fullName>Industries__c</fullName>
    <label>Industry Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Clean Technology</fullName>
            </value>
            <value>
                <fullName>Diversified</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>