unpackaged/main/default/objects/Account/fields/Industry_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Industry_Level_1__c</fullName>
    <label>Industry Level 1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>