unpackaged/main/default/objects/Account/fields/Industry_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Industry_Level_2__c</fullName>
    <label>Industry Level 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>