unpackaged/main/default/objects/Account/fields/Initial_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Investment_Date__c</fullName>
    <label>Initial Investment Date</label>
    <type>Date</type>
</CustomField>