unpackaged/main/default/objects/Account/fields/Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name__c</fullName>
    <label>Institution Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>