unpackaged/main/default/objects/Account/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <label>Institution Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisors</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Corporate Pensions</fullName>
            </value>
            <value>
                <fullName>Corporations</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Foundations/ Endowments</fullName>
            </value>
            <value>
                <fullName>Friends &amp; Family</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Public Pension Funds</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Corporate M&amp;A</fullName>
            </value>
            <value>
                <fullName>Buy-side M&amp;A</fullName>
            </value>
            <value>
                <fullName>Sell-side M&amp;A</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Intermediaries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>