unpackaged/main/default/objects/Account/fields/Introduced_by__c.field-meta.xml
<CustomField>
    <fullName>Introduced_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Introduced by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>