unpackaged/main/default/objects/Account/fields/isAutoCreated__c.field-meta.xml
<CustomField>
    <fullName>isAutoCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAutoCreated</label>
    <type>Checkbox</type>
</CustomField>