unpackaged/main/default/objects/Account/fields/Last_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Last_Touchpoint__c</fullName>
    <label>Last Touchpoint</label>
    <type>Date</type>
</CustomField>